Changes based on Exam instructions

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <h1>Weather API Results</h1>
 
     <form action="/" method="post">
-        <label for="cityInput">City: </label>
-        <input id = "cityInput" type="text" name="cityInput">
-        <button type="submit">Go</button>
+        <label for="cityInput">Press "Go" to veiw Cairns Weather </label>
+        <button type="Go">Go</button>
+
     </form>
 
   </body>
 </html>
+
+
